--- a/ModbusSyncStructLIb.csproj
+++ b/ModbusSyncStructLIb.csproj
@@ -53,6 +53,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DespriptionState\SlaveState.cs" />
+    <Compile Include="DespriptionState\TableUsedforRegister.cs" />
     <Compile Include="MasterSyncStruct.cs" />
     <Compile Include="MetaClassForStructandtherdata.cs" />
     <Compile Include="PropertiesSetting.cs" />
