--- a/ModbusSyncStructLIb.csproj
+++ b/ModbusSyncStructLIb.csproj
@@ -87,5 +87,11 @@
       <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StructAllforTest\StructAllforTest.csproj">
+      <Project>{16ccdd08-7631-4316-bb22-901c8dbd53a3}</Project>
+      <Name>StructAllforTest</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
