--- a/app.config
+++ b/app.config
@@ -22,6 +22,9 @@
             <setting name="StopBits" serializeAs="String">
                 <value>StopBits.One</value>
             </setting>
+            <setting name="TypeComModbus" serializeAs="String">
+                <value>1</value>
+            </setting>
         </ModbusSyncStructLIb.Properties.SettingMasterSlave>
     </userSettings>
 </configuration>
