--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LZMA-SDK" version="19.0.0" targetFramework="net461" />
   <package id="NLog" version="4.7.4" targetFramework="net461" />
   <package id="NModbus4" version="2.1.0" targetFramework="net461" />
 </packages>
